rename pompeys img

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@
 }
 
 .block3 {
-    background: url(../images/p4.jpg);
+    background: url(../images/pompei.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
