--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@
 
 .block1 {
     background: url(../images/11.jpg);
+    background: url(images/11.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -72,6 +73,7 @@
 
 .block2 {
     background: url(../images/12.jpg);
+    background: url(images/12.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -84,6 +86,7 @@
 
 .block3 {
     background: url(../images/pompei.jpg);
+    background: url(images/pompei.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
