--- a/styles/media.css
+++ b/styles/media.css
@@ -6,27 +6,24 @@
         text-shadow: black 2px 3px 1px;
     }
 
-    .block1 p {
-        top: 25%;
+    .p-1{
+        top: 10%;
         font-size: 30px;
         width: 100%;
-        letter-spacing: 1px;
         text-shadow: black 5px 5px 1px;
     }
 
-    .block2 p {
+    .p-2 {
         top: 10%;
-        font-size: 35px;
-        width: 100%;
-        letter-spacing: 1px;
+        font-size: 30px;
+        width: 90%;
         text-shadow: black 5px 5px 1px;
     }
 
-    .block3 p {
+    .p-3 {
         top: 10%;
-        font-size: 27px;
-        width: 100%;
-        letter-spacing: 2px;
+        font-size: 25px;
+        width: 95%;
         text-shadow: black 5px 5px 1px;
     }
 
