--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,9 @@ section:nth-child(3) {
 }
 
 section:nth-child(4) {
-    background: url(images/pompei.jpg);
+    /* background: url(images/rome.jpg); */
+    background: url(images/spqr.png);
+    /* background-position: top; */
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -81,7 +83,7 @@ section:nth-child(4) {
 }
 
 section:nth-child(5) {
-    background: url(images/rome.jpg);
+    background: url(images/pompei.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -93,8 +95,8 @@ section:nth-child(5) {
         overflow: hidden;
     }
 
-    section:nth-child(5) {
-        background: url(images/rome2.jpg);
+    section:nth-child(4) {
+        background: url(images/spqr.png);
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
